pkg/lang/testdata/ub/types/invalid/library-config-interpolated.ub
library-config($'github.com/{{ org }}/aws')
